samples/_failures_safe/1761787243_04ec8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e400ec30.c: In function ‘write_compressed_output’:
./samples/SAFE/__tmp_e400ec30.c:197: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_e400ec30.c:196:5: error: expected declaration or statement at end of input
  196 |     while
      |     ^~~~~
